crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tests__as_simple.snap
---
source: crates/nash-parse/src/pattern/mod.rs
description: "Code:\n\nx as foo"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: Alias(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: Var(
                "x",
            ),
        },
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
            value: "foo",
        },
    ),
}
