crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tests__as_with_tuple.snap
---
source: crates/nash-parse/src/pattern/mod.rs
description: "Code:\n\n(a, b) as pair"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 15,
        },
    },
    value: Alias(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: Tuple(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: Var(
                        "b",
                    ),
                },
                [],
            ),
        },
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 11,
                },
                end: Position {
                    line: 1,
                    column: 15,
                },
            },
            value: "pair",
        },
    ),
}
