crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tests__complex_pattern.snap
---
source: crates/nash-parse/src/pattern/mod.rs
description: "Code:\n\nJust x :: rest as list"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 23,
        },
    },
    value: Alias {
        pattern: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 15,
                },
            },
            value: Cons {
                head: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 8,
                        },
                    },
                    value: Ctor {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 1,
                            },
                            end: Position {
                                line: 1,
                                column: 5,
                            },
                        },
                        name: "Just",
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 7,
                                    },
                                },
                                value: Var(
                                    "x",
                                ),
                            },
                        ],
                    },
                },
                tail: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 11,
                        },
                        end: Position {
                            line: 1,
                            column: 15,
                        },
                    },
                    value: Var(
                        "rest",
                    ),
                },
            },
        },
        name: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 19,
                },
                end: Position {
                    line: 1,
                    column: 23,
                },
            },
            value: "list",
        },
    },
}
