crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tests__cons_multiple.snap
---
source: crates/nash-parse/src/pattern/mod.rs
description: "Code:\n\na :: b :: c"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Cons {
        head: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: Var(
                "a",
            ),
        },
        tail: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 12,
                },
            },
            value: Cons {
                head: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 6,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                    value: Var(
                        "b",
                    ),
                },
                tail: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 11,
                        },
                        end: Position {
                            line: 1,
                            column: 12,
                        },
                    },
                    value: Var(
                        "c",
                    ),
                },
            },
        },
    },
}
