crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tests__cons_simple.snap
---
source: crates/nash-parse/src/pattern/mod.rs
description: "Code:\n\nhead :: tail"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 13,
        },
    },
    value: Cons(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            value: Var(
                "head",
            ),
        },
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 9,
                },
                end: Position {
                    line: 1,
                    column: 13,
                },
            },
            value: Var(
                "tail",
            ),
        },
    ),
}
