crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__tests__ctor_nested.snap
---
source: crates/nash-parse/src/pattern/mod.rs
description: "Code:\n\nJust (Just x)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: Ctor {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 5,
            },
        },
        name: "Just",
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 13,
                    },
                },
                value: Ctor {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    name: "Just",
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 12,
                                },
                                end: Position {
                                    line: 1,
                                    column: 13,
                                },
                            },
                            value: Var(
                                "x",
                            ),
                        },
                    ],
                },
            },
        ],
    },
}
